tests/machine/x/fs/join_multi.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/join_multi.fs(23,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (22:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/join_multi.fs(23,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (22:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/join_multi.fs(24,24): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(24,39): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(24,47): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(24,54): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon3    
The type 'obj' is not compatible with the type 'Anon3'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(24,77): error FS1129: The type 'obj' does not contain a field 'name'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(27,45): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon4    
The type 'obj' is not compatible with the type 'Anon4'

/workspace/mochi/tests/machine/x/fs/join_multi.fs(27,82): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon4    
The type 'obj' is not compatible with the type 'Anon4'
